--- a/templates/playbooks.yaml
+++ b/templates/playbooks.yaml
@@ -81,7 +81,7 @@ spec:
       name: Generating the Catalog Info Component
       action: fetch:template
       input:
-        url: ./catalog-info/
+        url: ../skeletons/catalog-info/
         values:
           repoUrl: '${{ parameters.repoUrl }}'
           owner: ${{ parameters.owner }}
