--- a/templates/collections.yaml
+++ b/templates/collections.yaml
@@ -2,7 +2,7 @@ apiVersion: scaffolder.backstage.io/v1beta3
 kind: Template
 metadata:
   name: collection-template
-  title: Create a Ansible Collection Project
+  title: Create a Ansible Collection Project GH
   description: Create a starter Ansible collection project preconfigured for tests and pipelines. Includes Development settings and configuration for building an execution environment
   tags:
     - recommended
