--- a/templates/playbooks.yaml
+++ b/templates/playbooks.yaml
@@ -3,7 +3,7 @@ kind: Template
 metadata:
   name: playbook-template
   title: Create a Ansible Playbook Project
-  description: Create a starter Ansible Playbook project preconfigured for tests and pipelines. Includes Development settings and configuration for building an execution environment
+  description: Create a starter Ansible git playbook project preconfigured for tests and pipelines. Includes Development settings and configuration for building an execution environment
   tags:
     - recommended
     - ansible
