--- a/templates/collections.yaml
+++ b/templates/collections.yaml
@@ -2,11 +2,12 @@ apiVersion: scaffolder.backstage.io/v1beta3
 kind: Template
 metadata:
   name: collection-template
-  title: Create a Ansible Collection Project
+  title: Create Ansible Collection Project
   description: Create a starter Ansible collection project preconfigured for tests and pipelines. Includes Development settings and configuration for building an execution environment
   tags:
     - recommended
     - ansible
+    - collection
 spec:
   owner: ansible-authors
   system: ansible
@@ -15,7 +16,6 @@ spec:
     - title: Provide information about the new component
       required:
         - repoUrl
-        - system
         - owner
         - collectionGroup
         - collectionName
@@ -30,7 +30,7 @@ spec:
         description:
           title: Description
           type: string
-          description: Describe this Collection and its purpose to help other users know what to use it for
+          description: Describe the collection and its purpose to help other users understand what to use it for.
         collectionGroup:
           title: Collection group name
           description: The 'collectionOrg' part of 'collectionOrg.collectionName'
@@ -107,6 +107,7 @@ spec:
     links:
       - title: Repository
         url: ${{ steps.publish.output.remoteUrl }}
+
       - title: Open in catalog
         icon: catalog
         entityRef: ${{ steps.register.output.entityRef }}
