--- a/templates/playbooks.yaml
+++ b/templates/playbooks.yaml
@@ -20,24 +20,32 @@ spec:
         - collectionGroup
         - collectionName
       properties:
-        repoUrl:
-          title: Repository Location
+        # repoUrl:
+        #   title: Repository Location
+        #   type: string
+        #   ui:field: RepoUrlPicker
+        #   ui:options:
+        #     allowedHosts:
+        #       - github.com
+        repoOwner:
+          title: Source code Git repository owner
           type: string
-          ui:field: RepoUrlPicker
-          ui:options:
-            allowedHosts:
-              - github.com
+          description: The organization name or username of your source code repository. For example “my-github-username”.
+        repoName:
+          title: Playbook Git repository name
+          description: The name of the new playbook project Git repository. For example “my-new-playbook-repo”
+          type: string
         description:
           title: Description
           type: string
           description: Describe the playbook and its purpose to help other users understand what to use it for.
         collectionGroup:
-          title: Collection group name
-          description: The 'collectionOrg' part of 'collectionOrg.collectionName'
+          title: Playbook project group name
+          description: The 'playProjOrg' part of 'playPorjOrg.playProjName'
           type: string
         collectionName:
-          title: Collection name
-          description: The 'collectionName' part of 'collectionOrg.collectionName'
+          title: Playbook project name
+          description: The 'playProjName' part of 'playProjOrg.playProjName'
           type: string
         owner:
           title: Owner
@@ -61,13 +69,14 @@ spec:
       name: Parse Entity Reference
       action: debug:log
       input:
-        extra: '${{ parameters.repoUrl }}'
+        extra: 'github.com?owner=${{ parameters.repoOwner }}&repo=${{ parameters.repoName }}'
 
     - id: ansible
       name: Generating the Ansible Source Code Component
       action: ansible:content:create
       input:
-        repoUrl: '${{ parameters.repoUrl }}'
+        repoOwner: '${{ parameters.repoOwner }}'
+        repoName: '${{ parameters.repoName }}'
         description: '${{ parameters.description }}'
         collectionGroup: '${{ parameters.collectionGroup }}'
         collectionName: '${{ parameters.collectionName }}'
