update template required

--- a/templates/playbooks.yaml
+++ b/templates/playbooks.yaml
@@ -15,7 +15,8 @@ spec:
   parameters:
     - title: Provide information about the new component
       required:
-        - repoUrl
+        - repoOwner
+        - repoName
         - owner
         - collectionGroup
         - collectionName
