push tag conditions

--- a/skeletons/catalog-info/catalog-info.yaml
+++ b/skeletons/catalog-info/catalog-info.yaml
@@ -15,7 +15,11 @@ metadata:
   {%- endif %}
   tags:
     - ansible
+    {%- if values.applicationType == "playbook-project" %}
+    - playbook
+    {%- elif values.applicationType == "collection-project" %}
     - collection
+    {%- endif %}
   annotations:
     backstage.io/techdocs-ref: dir:.
     {%- if values.sourceControl == "gitlab.com" %}
