--- a/templates/collections.yaml
+++ b/templates/collections.yaml
@@ -20,9 +20,9 @@ spec:
         - owner
         - collectionGroup
         - collectionName
-        - sourceControl
+        - sourceControla
       properties:
-        sourceControl:
+        sourceControla:
           title: Souce control
           type: string
           description: Select the source control option
@@ -85,7 +85,7 @@ spec:
         collectionGroup: '${{ parameters.collectionGroup }}'
         collectionName: '${{ parameters.collectionName }}'
         applicationType: collection-project
-        sourceControl: '${{ parameters.sourceControl }}'
+        sourceControl: '${{ parameters.sourceControla }}'
 
     - id: catalogTemplate
       name: Generating the Catalog Info Component
@@ -100,7 +100,7 @@ spec:
           description: ${{ parameters.description }}
           collectionGroup: ${{ parameters.collectionGroup }}
           collectionName: ${{ parameters.collectionName }}
-          sourceControl: '${{ parameters.sourceControl }}'
+          sourceControl: '${{ parameters.sourceControla }}'
           devSpacesBaseUrl: ${{ steps.ansible.output.devSpacesBaseUrl }}
 
     - id: publish
